@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-03 14:27 pjf ;
+; @(#)$Ident: dist.ini 2013-12-06 14:31 pjf ;
 
 name = Module-Provision
 
@@ -45,8 +45,6 @@ Module::Build     = 0.4004
 version           = 0.88
 File::DataClass   = v0.25.0
 Module::Build     = 0.4004
-
-[Meta::Dynamic::Config]
 
 [MetaNoIndex]
 directory         = examples
