@@ -1,18 +1,19 @@
-# @(#)Ident: 06yaml.t 2013-08-12 15:16 pjf ;
+# @(#)Ident: 06yaml.t 2013-12-06 14:39 pjf ;
 
 use strict;
 use warnings;
 use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 1 $ =~ /\d+/gmx );
-use File::Spec::Functions;
-use FindBin qw( $Bin );
-use lib catdir( $Bin, updir, q(lib) );
+use File::Spec::Functions   qw( catdir updir );
+use FindBin                 qw( $Bin );
+use lib                 catdir( $Bin, updir, 'lib' );
 
-use English qw(-no_match_vars);
 use Test::More;
 
 BEGIN {
    $ENV{AUTHOR_TESTING} or plan skip_all => 'YAML test only for developers';
 }
+
+use English qw( -no_match_vars );
 
 eval { require Test::YAML::Meta; };
 
