@@ -1,4 +1,4 @@
-# @(#)Ident: 10test_script.t 2013-08-13 15:47 pjf ;
+# @(#)Ident: 10test_script.t 2013-12-06 14:33 pjf ;
 
 use strict;
 use warnings;
@@ -7,8 +7,9 @@ use File::Spec::Functions   qw( catdir updir );
 use FindBin                 qw( $Bin );
 use lib                 catdir( $Bin, updir, 'lib' );
 
-use Module::Build;
 use Test::More;
+use Test::Requires { version => 0.88 };
+use Module::Build;
 
 my $notes = {}; my $perl_ver;
 
