@@ -1,5 +1,7 @@
 Revision history for Module::Provision
 
+          - Tweaked boilerplate in share/*.t
+          - Simplified share/DZ_Build.PL
           - Use DZ::P::AbstractFromPOD
           - Use DZ::P::LicenseFromModule
           - Fixed fd3 usage in select_project
